<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" android:visibility="visible">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/text_layout">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="24dp"
                  android:textStyle="bold"
                  android:gravity="center"
                  android:text="@string/title_activity_login"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/text_layout"
                  android:id="@+id/edit_layout"
                  android:orientation="vertical">
        <EditText
                android:id="@+id/id_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:maxLines="1"/>
        <EditText
                android:id="@+id/id_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"/>


    </LinearLayout>

    <LinearLayout android:id="@+id/button_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/edit_layout"
                  android:layout_marginTop="16dp"
                  android:orientation="horizontal">

        <Button android:id="@+id/id_btn_login"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textStyle="bold"/>

        <Button android:id="@+id/id_btn_register"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textStyle="bold"/>
    </LinearLayout>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:id="@+id/id_pb_loading"
            android:layout_below="@+id/button_layout"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>